--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
     </section>
+    <section id="news">
+      <h3>company news</h3>
+  <p>lorem Ipsum</p>
+    </section>
 
     <section id="details">
       <div>
